# yandex_cinema_API

./: .gitignore  Dockerfile  LICENSE  README.md  docker_compose.yml  pyproject.toml  redis.conf
src/: dependencies.py  main.py
src/api/: __init__.py  routers.py
src/api/v1/: __init__.py  films.py  genres.py  persons.py
src/core/: settings.py
src/schemas/: film.py  genre.py  person.py
src/services/: film_service.py  genre_service.py  person_service.py
