[project]
name = "yandex-movies-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.8",
    "orjson==3.10.15",
    "pydantic-settings==2.7.1",
    "elasticsearch[async]==8.13.2",
    "redis==5.0.4 ",
    "uvicorn==0.34.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
